# NirmiqEcho

./: .env.example  .gitignore  CODEBASE_MAP.md  CODEX_IMPLEMENTATION.md  DEPLOY.md  PRD.md  README.md  SECURITY.md  Test 1 voice.m4a  Test 2.m4a  Test 3.m4a  Test 4.m4a  accent_profile.py  app_discovery.py  audio_handler.py  command_processor.py  commands.example.yaml  install_autostart.bat  main.py  post_processor.py  pyproject.toml  requirements.txt  setup.bat  start.bat  start_silent.vbs  transcription.py  typer.py  ui.py  utils.py  wake_word.py
.claude/: settings.json
.github/workflows/: ci.yml
assets/: README.md  accent_profile.json
config/: models.yaml  nirmiq.yaml
core/: __init__.py  main.py
core/api/: schemas.py  server.py
core/config/: defaults.yaml  settings.py
handlers/: typer.py  whatsapp.py
legacy_prototype/: dispatcher.py  intent_parser.py  main.py  overlay.py  requirements.txt  tray.py  tts.py
plugins/: __init__.py  base_plugin.py  registry.py
tests/: conftest.py  test_core.py  test_security.py
voice/: __init__.py  listener.py
voiceflow_local/: README.md  accent_profile.py  app_discovery.py  audio_handler.py  calculator.py  command_processor.py  conversation_state.py  file_assistant.py  knowledge.py  llm_fallback.py  main.py  mic_check.py  post_processor.py  requirements.txt  run.bat  setup.bat  test_calc_routing.py  test_capabilities.py  test_confirm.py  test_context.py  test_conversational.py  test_custom_commands.py  test_e2e.py  test_fallback.py  test_knowledge.py  test_safety.py  transcription.py  tts_engine.py  ui.py  units.py
(+51 files in other folders)
