[project]
name = "nirmiq-echo"
version = "0.1.0"
description = "Nirmiq Echo — a local-first voice operating system"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.1.0",
    "sounddevice>=0.5.0",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "ollama>=0.3.3",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "psutil>=6.0.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "noisereduce>=3.0.0",
    "PyYAML>=6.0",
    "rich>=13.7.0",
    "send2trash>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
